# Mohaeng-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  final_result.json  main.py  pyproject.toml  test_embedding.py  test_result.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: universal_template.md
.github/workflows/: cd.yml  ci.yml
.prompts/: feature_spec.md  ground_rule.md  project_structure.md
app/: database.py  main.py  test_graph.py
app/api/: chat.py  dependencies.py  endpoints.py  generate.py  modify.py  recommend.py
app/core/: config.py  geo.py  llm_router.py  logger.py  logging_config.py  readiness.py  region_bbox.py  region_bbox_data.py  timeout_policy.py  visit_time_llm.py  visit_time_policy.py
app/graph/: nodes.py  state.py  workflow.py
app/graph/chat/: __init__.py  llm.py  state.py  utils.py  workflow.py
app/graph/chat/nodes/: __init__.py  analyze_intent.py  cascade.py  general_chat.py  mutate.py  respond.py  (+1 more)
app/graph/modify/: __init__.py  llm.py  state.py  utils.py  workflow.py
app/graph/recommendation/: __init__.py  embedder.py  llm.py  workflow.py
app/graph/roadmap/: __init__.py  llm.py  nodes.py  state.py  utils.py  workflow.py
app/integrations/: __init__.py  embedding.py
app/models/: base.py  city.py  region_embedding.py
app/routers/: search.py
app/schemas/: chat.py  course.py  enums.py  generate.py  jwt.py  modify.py  place.py  recommend.py  search.py  skeleton.py
app/services/: callback_delivery.py  callback_url.py  chat_service.py  city_service.py  crawler.py  embedding.py  generate_service.py  google_places_service.py  jwt_service.py  modify_service.py  place_rerank_service.py  places_service.py  recommend_service.py  region_service.py
chroma_db/: chroma.sqlite3
crawling/: __init__.py  city_data.py  ingest_data.py
scripts/: city_data.py  ingest_data.py  run_crawler_test.py  test_embedding_manual.py
tests/: conftest.py  test_callback_delivery.py  test_callback_url.py  test_chat_schema.py  test_graph_workflow.py  test_main.py  test_modify_workflow.py  test_readiness.py  test_recommend_service.py  test_smoke.py  test_timeout_policy.py
tests/mocks/: __init__.py  mock_places_service.py
tools/: generate_region_bbox.py
(+14 files in other folders)
