[project]
name = "mohaeng-ai"
version = "0.1.0"
description = "Monhaeng service AI server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
